# stem_magnet

./: Cargo.toml  README.md
docs/: links.md  main.md
docs/img/: bread_loaf_magnet_excitation.odg  cad_arc_parallel_enums.dxf  cad_arc_parallel_magnet.dxf  cad_arc_segment_magnet.dxf  cad_arc_segment_magnet_pos_neg_radii.dxf  cad_breadloaf_magnet.dxf  cad_linear_motor.dxf  cad_magnet_assembly.dxf  cad_magnetization_vec.dxf  cad_rotary_motor.dxf  drawing_block_magnet.dxf  drawing_linear_motor.dxf  drawing_magnet_assembly.dxf
examples/: create_and_draw_arc_parallel_magnets.rs  create_and_draw_arc_segment_magnets.rs  readme_magnets.rs
src/: assembly.rs  block.rs  bread_loaf.rs  error.rs  lib.rs  magnet.rs
src/arc/: mod.rs  parallel.rs  segment.rs
tests/: arc_parallel.rs  arc_segment.rs  block.rs  bread_loaf.rs
